# hermetism

./: .gitignore  404.html  README.md  book.toml  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  setup.sh  toc.html  toc.js
.github/workflows/: deploy.yml
angels/aquarius/: anauel.html  damabiah.html  iahhel.html  manakel.html  mehiel.html  umabel.html
angels/capricorn/: harahel.html  ieialel.html  mebahiah.html  mitzrael.html  nemamiah.html  poyel.html
angels/pisces/: eyael.html  habuhiah.html  haiaiel.html  mumiah.html  rochel.html  yabamiah.html
angels/sagittarius/: daniel.html  hahasiah.html  imamiah.html  nanael.html  nithael.html  vehuel.html
app/: README.md  TODO.md  app.py
app/config/: extraction_prompts.py  settings.py
app/docs/: MATERIAL_UI_ENHANCEMENT.md  sessions.md
app/services/: __init__.py  ai_service.py  extraction.py  material_library.py  materials_workspace.py  persistence.py  project.py  prompt_management.py  session.py
app/ui/: __init__.py  extraction_config_phase.py  extraction_phase.py  input_panel.py  material_card.py  materials_workspace.py  project_dashboard.py  prompt_workspace.py  sidebar.py  synthesis_panel.py  synthesis_phase.py  upload_phase.py
app/utils/: helpers.py
output/: sol_em_aries_synthesis.md  sol_em_aries_synthesis_combined.md
scripts/: hermetic_synthesis.py  image_transcriber.py  organize_mds.py  url_downloader.py  youtube_transcript.py
src/: README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_FULL.md  SUMMARY.md  SUMMARY.md.backup  astrology.md  changes.md  kabbalah.md
(+318 files in other folders)
