[project]
name = "hermetism"
version = "0.1.0"
description = "Hermetism research project"
requires-python = "==3.13.*" 
dependencies = [
  "beautifulsoup4>=4.13.3",
  "dotenv>=0.9.9",
  "lxml>=5.4.0",
  "openai",
  "pypdf2>=3.0.1",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "tenacity>=9.1.2",
  "tiktoken>=0.9.0",
  "youtube-transcript-api>=0.6.3",
]
